<resources>
    <string name="app_name">Health tracker</string>
    <string name="welcome_text">Welcome!</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="age_hint">Age</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign in</string>
    <string name="next_button">Next</string>
    <string name="finish_button">Complete</string>
    <string name="health_tracking_text">Health monitoring</string>
    <string name="details_button">Details</string>
    <string name="detailed_info_text">Detailed information</string>
    <string name="back_button">Back</string>
</resources>