<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/registrationLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green2"
        android:hint="@string/login_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/registrationEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:backgroundTint="@color/green2"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registrationPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:backgroundTint="@color/green2"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:background="@color/green1"
        android:textColor="@color/white"
        android:onClick="onNextClick" />

    <!-- Кнопка "Назад" -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green1"
        android:onClick="onBackClick"
        android:text="@string/back_button"
        android:textColor="@color/white" />

</LinearLayout>