<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/ageField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green2"
        android:hint="@string/age_hint"

        android:inputType="number" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageField"
        android:layout_marginTop="15dp"
        android:background="@color/green1"
        android:onClick="onFinishClick"
        android:text="@string/finish_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finishButton"
        android:layout_marginTop="15dp"
        android:background="@color/green1"
        android:onClick="onBackClick"
        android:text="@string/back_button"
        android:textColor="@color/white" />

</RelativeLayout>